    Generic html attribute setting (html_attr)
    Set 'processed' flag when building results in BUILD to fix problem
        with garbage collected results.
    *** it's possible that this may break code if field values were being
        set outside of FormHandler, or params were set on new. Pass params
        on process. Set fields inside FormHandler, or run clear first, then
        set values. 
    Add flag 'no_preload' to skip building results in new (BUILD) if not needed
    Add flag 'no_widgets' to skip applying widgets to fields if not needed
    Fix for Date fields in compounds.
    Types Printable & SingleWord use class messages

    Add link to the bug tracker into the HELP section in the Pod.

0.34001 Mon May 16, 2011
    Fiz another memory cycle using Select field
    Tweak code creating results for Field testing

0.34000 Mon May 16, 2011
    Fixed memory cycles; 1 in HFH code, others by requiring Moose 2.0007
    Localize value of a button
    Allow limited use of has_many multiple select
    Add SimpleInline & TableInline widgets to not wrap compound fields

0.33002 Tues Feb 22, 2011
    Accidentally left off compatibility for 'required_message' attribute
        messages => { required => '...' } is new style and worked

0.33001 Mon Feb 21, 2011
    Remove unnecessary with of HFH::Validate::Actions

0.33000 Mon Feb 21, 2011
    bug - empty_select check defined
    Add button field, widget, template
    Check html attributes for definedness not truth
    Add ability to set field inactive on new & process
       in addition to setting active
    Move 'no_render_label' into Field
    Use form's language_handle in fields
    Improve PrimaryKey doc
    Return empty hashref from $form->value instead of undef
    Merge experimental Wizard into master
    Render disabled select options
    Repeatable contains rendering incorrectly, skipping empty elements
    Add rendering of form_errors to widgets and Render::Simple